--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -2,10 +2,16 @@
 @import "lib/variables";
 @import "lib/mixins";
 @import "lib/helpers";
+@import "lib/wrapper";
+@import "lib/block";
 
 // Vendors
 @import "vendors/normalize";
 
 // Base
+@import "base/body";
 @import "base/typography";
 @import "base/button";
+
+// Layout
+@import "layout/header-nav";
