--- a/src/assets/scss/base/button.scss
+++ b/src/assets/scss/base/button.scss
@@ -8,7 +8,7 @@
   box-sizing: border-box;
   border: 0;
   border-radius: 5px;
-  margin: 0 0 0.5rem;
+  margin: 0;
   padding: 1.4rem 3.2rem 1.3rem;
   font-size: 1.6rem;
   font-weight: $font-weight-bold;
@@ -50,5 +50,102 @@
   &[aria-disabled="true"] {
     background-color: lighten($brand-color-one, 15%);
     cursor: not-allowed;
+  }
+}
+
+// Menu Button
+// https://codepen.io/carlosriera/pen/qNgrEo
+$size: 22px;
+$height: 16px;
+$width: 20px;
+$line-size: 3px;
+$line-color: $grey-violet;
+$line-radius: 0;
+$to-translate: ($height - $line-size) / 2;
+
+.btn-menu {
+  position: relative;
+  width: $size;
+  height: $size;
+  overflow: hidden;
+  border: 0;
+  outline: 0;
+  text-decoration: none;
+  background: none;
+  cursor: pointer;
+
+  &:focus-visible {
+    outline: 2px solid $line-color;
+  }
+
+  &__icon {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: $width;
+    height: $height;
+    transform: translate(-50%, -50%);
+  }
+
+  &__line {
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: $line-size;
+    border-radius: $line-radius;
+    background-color: $line-color;
+    pointer-events: none;
+
+    &--1 {
+      top: 0;
+      transition: transform 0.2s ease-in-out 0.15s, top 0.2s ease-in-out 0.2s;
+
+      &::before {
+        content: "";
+        position: absolute;
+        left: 0;
+        width: 100%;
+        height: $line-size;
+        border-radius: $line-radius;
+        background-color: $line-color;
+        transition: transform 0.15s ease-in-out;
+      }
+    }
+
+    &--2 {
+      top: 0;
+      bottom: 0;
+      margin: auto;
+      transition: opacity 0s ease-in-out 0.35s;
+    }
+
+    &--3 {
+      bottom: 0;
+      transition: opacity 0s ease-in-out 0.25s;
+    }
+  }
+
+  // Open
+  &.open &__line--1 {
+    top: $to-translate * 2;
+    transform: translate3d(0, -$to-translate, 0) rotate(-45deg);
+    transition:
+      top 0.2s ease-in-out,
+      transform 0.15s ease-in-out 0.2s;
+  }
+
+  &.open &__line--1::before {
+    transform: rotate(-90deg);
+    transition: transform 0.15s ease-in-out 0.3s;
+  }
+
+  &.open &__line--2 {
+    opacity: 0;
+    transition: opacity 0s ease-in-out 0.1s;
+  }
+
+  &.open &__line--3 {
+    opacity: 0;
+    transition: opacity 0s ease-in-out 0.2s;
   }
 }
