--- a/src/assets/scss/lib/variables.scss
+++ b/src/assets/scss/lib/variables.scss
@@ -59,4 +59,5 @@ $font-weight-bold: 700;
 // Header Nav
 // ------------------------
 
+$header-nav-height: 10.6rem;
 $header-nav-height-tablet: 7rem;
