--- a/src/assets/scss/lib/variables.scss
+++ b/src/assets/scss/lib/variables.scss
@@ -47,6 +47,11 @@ $grey-violet: #9e9aa7;
 $blue-dark: #35323e;
 $violet-dark: #232127;
 
+// Section
+$section-bg-color-light: #f0f1f6;
+$section-bg-color-medium: $brand-color-two;
+$section-bg-color-dark: $violet-dark;
+
 // ------------------------
 // Typography
 // ------------------------
