--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -2,6 +2,7 @@
 @import "lib/variables";
 @import "lib/mixins";
 @import "lib/helpers";
+@import "lib/section";
 @import "lib/wrapper";
 @import "lib/block";
 
