--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -15,7 +15,9 @@
 @import "base/button";
 
 // Layout
+@import "layout/form";
 @import "layout/header-nav";
 
 // Components
 @import "components/hero";
+@import "components/url-shortener";
