--- a/src/assets/scss/components/hero.scss
+++ b/src/assets/scss/components/hero.scss
@@ -6,25 +6,20 @@
   display: flex;
   flex-direction: row-reverse;
   align-items: center;
-  height: calc(100vh - #{$header-nav-height});
+  height: 580px;
   gap: $gutter;
 
-  &__image {
-    position: relative;
+  > div {
     flex: 1;
-    width: 100%;
-    height: 100%;
+  }
 
+  &__image {
     img {
-      position: absolute;
-      top: 10%;
-      left: 0;
+      width: 150%;
     }
   }
 
   &__content {
-    flex: 1;
-
     h1 {
       margin-bottom: 0.3rem;
       font-size: 6.3rem;
@@ -39,18 +34,9 @@
     }
   }
 
-  @include media-query(tablet) {
+  @include media-query(laptop) {
     height: auto;
-    padding: 6rem 0;
-
-    &__image {
-      img {
-        position: relative;
-        top: auto;
-        left: auto;
-        width: 150%;
-      }
-    }
+    padding-top: 2rem;
 
     &__content {
       h1 {
@@ -64,9 +50,13 @@
     }
   }
 
+  @include media-query(tablet) {
+    padding: 5rem 0 6rem;
+  }
+
   @include media-query(mobile) {
     flex-direction: column;
-    padding: 3rem 0;
+    padding-top: 3rem;
 
     &__content {
       margin-top: 2rem;
