--- a/src/assets/scss/base/typography.scss
+++ b/src/assets/scss/base/typography.scss
@@ -14,7 +14,7 @@
 }
 
 body {
-  font-size: 1.8rem;
+  font-size: 1.6rem;
   line-height: 1.5;
   color: $grey-violet;
 }
@@ -25,12 +25,10 @@ h3,
 h4,
 h5,
 h6 {
+  margin-top: 0;
   margin-bottom: 0.5em;
   font-weight: $font-weight-medium;
-
-  &:first-child {
-    margin-top: 0;
-  }
+  color: $blue-dark;
 
   &:last-child {
     margin-bottom: 0;
@@ -46,6 +44,7 @@ h6 { font-size: 1.6rem; }
 
 p {
   margin-top: 0;
+  margin-bottom: 1rem;
 }
 
 b {
@@ -55,4 +54,12 @@ b {
 ul {
   padding: 0;
   list-style: none;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.text-muted {
+  color: $grey-violet;
 }
