--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -22,3 +22,5 @@
 @import "components/hero";
 @import "components/url-shortener";
 @import "components/url-list";
+@import "components/card";
+@import "components/chained-cards";
