--- a/src/assets/scss/base/typography.scss
+++ b/src/assets/scss/base/typography.scss
@@ -35,12 +35,54 @@ h6 {
   }
 }
 
-h1 { font-size: 4.2rem; }
-h2 { font-size: 3.6rem; }
-h3 { font-size: 2.4rem; }
-h4 { font-size: 2rem; }
-h5 { font-size: 1.8rem; }
-h6 { font-size: 1.6rem; }
+h1 {
+  font-size: 4.2rem;
+
+  @include media-query(mobile) {
+    font-size: 3.2rem;
+  }
+}
+
+h2 {
+  font-size: 3.2rem;
+  line-height: 1.3;
+
+  @include media-query(mobile) {
+    font-size: 2.2rem;
+  }
+}
+
+h3 {
+  font-size: 2.4rem;
+
+  @include media-query(mobile) {
+    font-size: 2rem;
+  }
+}
+
+h4 {
+  font-size: 2rem;
+
+  @include media-query(mobile) {
+    font-size: 1.8rem;
+  }
+}
+
+h5 {
+  font-size: 1.8rem;
+
+  @include media-query(mobile) {
+    font-size: 1.5rem;
+  }
+}
+
+h6 {
+  font-size: 1.5rem;
+
+  @include media-query(mobile) {
+    font-size: 1.4rem;
+  }
+}
 
 p {
   margin-top: 0;
