--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -17,6 +17,7 @@
 // Layout
 @import "layout/form";
 @import "layout/header-nav";
+@import "layout/footer";
 
 // Components
 @import "components/hero";
