--- a/src/assets/scss/lib/variables.scss
+++ b/src/assets/scss/lib/variables.scss
@@ -39,6 +39,7 @@ $z-index-header-nav: 4000;
 $brand-color-one: #2acfcf;
 $brand-color-two: #3b3054;
 $brand-color-three: #f46262;
+$brand-color-four: #34313d;
 
 // Generic
 $black: #000;
