--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -13,6 +13,7 @@
 @import "base/body";
 @import "base/typography";
 @import "base/button";
+@import "base/icons";
 
 // Layout
 @import "layout/form";
