--- a/src/assets/scss/lib/variables.scss
+++ b/src/assets/scss/lib/variables.scss
@@ -68,3 +68,9 @@ $font-weight-bold: 700;
 
 $header-nav-height: 10.6rem;
 $header-nav-height-tablet: 7rem;
+
+// ------------------------
+// Form
+// ------------------------
+
+$form-error: $brand-color-three;
