--- a/src/assets/scss/base/button.scss
+++ b/src/assets/scss/base/button.scss
@@ -52,6 +52,27 @@
     background-color: lighten($brand-color-one, 15%);
     cursor: not-allowed;
   }
+
+  // Loading spinner
+  .icon-spinner {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: none;
+    margin: auto;
+  }
+
+  &--loading {
+    .btn__text {
+      visibility: hidden;
+    }
+
+    .icon-spinner {
+      display: inline-block;
+    }
+  }
 }
 
 // Menu Button
