Feature - replaces "Visit" button with copy to clipboard functionality on URLs list

--- a/src/assets/scss/base/button.scss
+++ b/src/assets/scss/base/button.scss
@@ -37,6 +37,14 @@
   }
 
   // Variations
+  &--secondary {
+    background-color: $brand-color-two;
+
+    &:hover {
+      background-color: lighten($brand-color-two, 15%);
+    }
+  }
+
   &--pill {
     border-radius: 25px;
   }
