--- a/src/assets/scss/components/url-list.scss
+++ b/src/assets/scss/components/url-list.scss
@@ -23,6 +23,10 @@
       }
     }
 
+    .btn {
+      min-width: 130px;
+    }
+
     &:last-child {
       margin-bottom: $block-padding;
     }
@@ -36,6 +40,7 @@
     &__item {
       flex-direction: column;
       gap: 1rem;
+      padding: 1.5rem;
 
       .btn {
         width: 100%;
