--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,5 +1,6 @@
 // Libs
 @import "lib/variables";
+@import "lib/functions";
 @import "lib/animations";
 @import "lib/mixins";
 @import "lib/helpers";
