--- a/src/assets/scss/components/stripe.scss
+++ b/src/assets/scss/components/stripe.scss
@@ -6,14 +6,14 @@
   width: 100%;
   height: 100%;
   padding: 5rem 0;
-  background-image: url("../../images/bg-boost-desktop.svg");
+  background-image: image-url("bg-boost-desktop.svg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
 
   @include media-query(mobile) {
     padding: 8rem 0;
-    background-image: url("../../images/bg-boost-mobile.svg");
+    background-image: image-url("bg-boost-mobile.svg");
 
     h2 {
       margin-bottom: 0.7em;
